--- a/site/index.html
+++ b/site/index.html
@@ -12,6 +12,7 @@
       --card-bg:#fff;
       --sitebar-h:70px;
       --accent:#2563eb;
+      --shadow: 0 4px 16px rgba(0,0,0,.08);
     }
     html,body{height:100%;margin:0;background:var(--bg);font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;color:#222;}
 
@@ -23,13 +24,45 @@
     }
     .site-title{font-size:22px;font-weight:600;margin:0;}
 
-    .main{padding:24px;box-sizing:border-box;height:calc(100vh - var(--sitebar-h));overflow-y:auto;display:flex;flex-direction:column;gap:16px;}
-
-    #search{
-      width:100%;max-width:520px;padding:10px 12px;border:1px solid var(--card-border);
-      border-radius:8px;font-size:15px;background:#fff;
-      box-shadow:0 1px 2px rgba(0,0,0,.04);
+    .main{
+      padding:24px;box-sizing:border-box;height:calc(100vh - var(--sitebar-h));
+      overflow-y:auto;display:flex;flex-direction:column;gap:16px;
     }
+
+    /* --- Searchbar with icon button --- */
+    .searchbar{
+      position:relative;width:100%;max-width:520px;
+    }
+    #search{
+      width:100%;padding:10px 44px 10px 12px;border:1px solid var(--card-border);
+      border-radius:8px;font-size:15px;background:#fff;box-shadow:0 1px 2px rgba(0,0,0,.04);
+    }
+    #search:focus{outline:none;border-color:#b9cdfc;box-shadow:0 0 0 3px rgba(37,99,235,.12);}
+    #searchBtn{
+      position:absolute;right:6px;top:50%;transform:translateY(-50%);
+      width:32px;height:32px;border:1px solid var(--card-border);border-radius:8px;
+      background:#fff;display:flex;align-items:center;justify-content:center;
+      cursor:pointer;transition:background .2s,border-color .2s;
+    }
+    #searchBtn:hover{background:#eef4ff;border-color:#8bbcff;}
+    #searchBtn svg{width:18px;height:18px;display:block;}
+
+    /* Typeahead popup */
+    .suggestions{
+      position:absolute;top:100%;left:0;width:100%;margin-top:6px;z-index:10;
+      background:#fff;border:1px solid var(--card-border);border-radius:10px;
+      box-shadow:var(--shadow);overflow:hidden;display:none;
+    }
+    .suggestions.show{display:block;}
+    .sugg-item{
+      display:flex;gap:8px;align-items:flex-start;padding:10px 12px;cursor:pointer;
+      transition:background .12s;font-size:14px;
+    }
+    .sugg-item:hover,.sugg-item.active{background:#f4f7ff;}
+    .sugg-id{font-weight:600;color:#111;}
+    .sugg-name{color:#555;}
+    .sugg-desc{color:#666;font-size:12px;margin-top:2px;}
+    .sugg-empty{padding:10px 12px;color:#777;font-size:13px;}
 
     #results{display:flex;flex-direction:column;gap:12px;}
 
@@ -86,14 +119,25 @@
   </div>
 
   <div class="main">
-    <input id="search" placeholder="Search by UniProt ID or protein name…" aria-label="Search entries" />
+    <!-- Search with icon & popup -->
+    <div class="searchbar" role="combobox" aria-haspopup="listbox" aria-owns="suggestions" aria-expanded="false">
+      <input id="search" placeholder="Search by UniProt ID or protein name…" aria-label="Search entries" autocomplete="off" />
+      <button id="searchBtn" aria-label="Search">
+        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
+             stroke-linecap="round" stroke-linejoin="round" aria-hidden="true">
+          <circle cx="11" cy="11" r="7"></circle>
+          <line x1="21" y1="21" x2="16.65" y2="16.65"></line>
+        </svg>
+      </button>
+      <div id="suggestions" class="suggestions" role="listbox" aria-label="Search suggestions"></div>
+    </div>
+
     <div id="results"></div>
     <nav id="pagination" class="pagination" aria-label="Results pagination"></nav>
   </div>
 
   <script>
     // ---- CONFIG: protein names CSV (UniProt ID, Protein Name) ----
-    // Keep this pointing at your uniprot-data repo's raw CSV:
     const PROTEIN_NAMES_URL =
       "https://raw.githubusercontent.com/BM-DB/uniprot-data/refs/heads/main/Protein-Metadata/protein_names.csv";
 
@@ -121,7 +165,6 @@
           field += c; i++;
         }
       }
-      // last field
       row.push(field);
       if (row.length > 1 || row[0] !== '') rows.push(row);
       return rows;
@@ -134,7 +177,6 @@
         const text = await res.text();
         const rows = parseCSV(text);
 
-        // Find header indices
         const header = rows[0]?.map(h => h.trim().toLowerCase()) || [];
         const idIdx = header.indexOf("uniprot id");
         const nameIdx = header.indexOf("protein name");
@@ -180,6 +222,7 @@
 
       if (!entries.length) {
         results.innerHTML = '<div class="empty">No matching entries found.</div>';
+        document.getElementById('pagination').innerHTML = '';
         return;
       }
 
@@ -206,11 +249,7 @@
 
         const nameSpan = document.createElement('span');
         nameSpan.className = 'entry-subtitle';
-        if (entry.protein_name) {
-          nameSpan.textContent = `— ${entry.protein_name}`;
-        } else {
-          nameSpan.textContent = '';
-        }
+        nameSpan.textContent = entry.protein_name ? `— ${entry.protein_name}` : '';
         title.appendChild(nameSpan);
 
         const desc = document.createElement('div');
@@ -262,7 +301,7 @@
         })
       );
 
-      // Page number window (smart: show first, last, current ±2)
+      // Page number window (first, last, current ±2)
       const pagesToShow = new Set([1, totalPages]);
       for (let p = page - 2; p <= page + 2; p++) {
         if (p >= 1 && p <= totalPages) pagesToShow.add(p);
@@ -302,51 +341,191 @@
       nav.appendChild(meta);
     }
 
-    // Global state (within this page)
+    // Global state
     let allEntriesWithNames = [];
     let currentFiltered = [];
     let currentPage = 1;
+
+    // Suggestions (typeahead) state
+    let activeIndex = -1; // keyboard highlight
+    const MAX_SUGG = 8;
 
     function goToPage(p) {
       const totalPages = Math.max(1, Math.ceil(currentFiltered.length / PAGE_SIZE));
       currentPage = Math.min(Math.max(1, p), totalPages);
       renderList(currentFiltered, currentPage);
-      // Move focus to results wrapper for better SR/keyboard experience
-      document.getElementById('results').setAttribute('tabindex', '-1');
-      document.getElementById('results').focus({preventScroll:true});
+      const results = document.getElementById('results');
+      results.setAttribute('tabindex', '-1');
+      results.focus({preventScroll:true});
+    }
+
+    function filterEntries(q) {
+      if (!q) return allEntriesWithNames;
+      const needle = q.trim().toLowerCase();
+      return allEntriesWithNames.filter(e => {
+        const id = (e.uniprot_id || '').toLowerCase();
+        const nm = (e.protein_name || '').toLowerCase();
+        return id.includes(needle) || nm.includes(needle);
+      });
     }
 
     function applyFilterAndRender() {
       const searchInput = document.getElementById('search');
-      const q = searchInput.value.trim().toLowerCase();
-      currentFiltered = !q
-        ? allEntriesWithNames
-        : allEntriesWithNames.filter(e => {
-            const id = (e.uniprot_id || '').toLowerCase();
-            const nm = (e.protein_name || '').toLowerCase();
-            return id.includes(q) || nm.includes(q);
-          });
-      currentPage = 1; // reset to first page on new filter
+      currentFiltered = filterEntries(searchInput.value);
+      currentPage = 1;
       renderList(currentFiltered, currentPage);
+      renderSuggestions(searchInput.value); // keep suggestions in sync
+    }
+
+    // --- Suggestions rendering ---
+    function renderSuggestions(q) {
+      const sugg = document.getElementById('suggestions');
+      const wrapper = document.querySelector('.searchbar');
+      const expanded = !!q && q.trim().length > 0;
+
+      sugg.innerHTML = '';
+      activeIndex = -1;
+
+      if (!expanded) {
+        sugg.classList.remove('show');
+        wrapper.setAttribute('aria-expanded', 'false');
+        return;
+      }
+
+      const matches = filterEntries(q).slice(0, MAX_SUGG);
+      if (matches.length === 0) {
+        const empty = document.createElement('div');
+        empty.className = 'sugg-empty';
+        empty.textContent = 'No matches';
+        sugg.appendChild(empty);
+        sugg.classList.add('show');
+        wrapper.setAttribute('aria-expanded', 'true');
+        return;
+      }
+
+      matches.forEach((e, idx) => {
+        const item = document.createElement('div');
+        item.className = 'sugg-item';
+        item.setAttribute('role', 'option');
+        item.setAttribute('id', 'sugg-' + idx);
+
+        const textWrap = document.createElement('div');
+        const line1 = document.createElement('div');
+        const idEl = document.createElement('span');
+        idEl.className = 'sugg-id';
+        idEl.textContent = e.uniprot_id || '(no ID)';
+        const nameEl = document.createElement('span');
+        nameEl.className = 'sugg-name';
+        nameEl.textContent = e.protein_name ? ` — ${e.protein_name}` : '';
+        line1.appendChild(idEl);
+        line1.appendChild(nameEl);
+
+        const line2 = document.createElement('div');
+        line2.className = 'sugg-desc';
+        const descr = e.description || (e.organism ? `Organism: ${e.organism}` : '');
+        if (descr) line2.textContent = descr;
+
+        textWrap.appendChild(line1);
+        if (descr) textWrap.appendChild(line2);
+
+        item.appendChild(textWrap);
+
+        item.addEventListener('mousedown', (evt) => {
+          // mousedown so click doesn’t blur input before we handle it
+          evt.preventDefault();
+          openEntry(e.uniprot_id);
+        });
+
+        sugg.appendChild(item);
+      });
+
+      sugg.classList.add('show');
+      wrapper.setAttribute('aria-expanded', 'true');
+    }
+
+    function moveActive(delta) {
+      const sugg = document.getElementById('suggestions');
+      const items = Array.from(sugg.querySelectorAll('.sugg-item'));
+      if (items.length === 0) return;
+
+      activeIndex = (activeIndex + delta + items.length) % items.length;
+      items.forEach((el, i) => el.classList.toggle('active', i === activeIndex));
+      const activeEl = items[activeIndex];
+      if (activeEl) activeEl.scrollIntoView({ block: 'nearest' });
+    }
+
+    function activateCurrentSuggestion() {
+      const sugg = document.getElementById('suggestions');
+      const items = Array.from(sugg.querySelectorAll('.sugg-item'));
+      if (activeIndex >= 0 && activeIndex < items.length) {
+        const idText = items[activeIndex].querySelector('.sugg-id')?.textContent || '';
+        if (idText) openEntry(idText);
+        hideSuggestions();
+      } else {
+        // No active item: trigger normal search
+        applyFilterAndRender();
+      }
+    }
+
+    function hideSuggestions() {
+      const sugg = document.getElementById('suggestions');
+      const wrapper = document.querySelector('.searchbar');
+      sugg.classList.remove('show');
+      wrapper.setAttribute('aria-expanded', 'false');
+      activeIndex = -1;
+    }
+
+    function openEntry(uid) {
+      if (!uid) return;
+      window.location.href = `entry.html?uid=${encodeURIComponent(uid)}`;
     }
 
     async function main() {
-      // Load both datasets
       const [entries, nameMap] = await Promise.all([loadCatalog(), fetchProteinNameMap()]);
 
-      // Merge names into entries array once
       allEntriesWithNames = entries.map(e => ({
         ...e,
         protein_name: nameMap.get((e.uniprot_id || '').toUpperCase()) || ''
       }));
 
-      // Hook up search
-      const searchInput = document.getElementById('search');
-      searchInput.addEventListener('input', applyFilterAndRender);
-
-      // Initial render
+      // Initial list
       currentFiltered = allEntriesWithNames;
       renderList(currentFiltered, currentPage);
+
+      // Wire up search behaviors
+      const input = document.getElementById('search');
+      const btn = document.getElementById('searchBtn');
+      const sugg = document.getElementById('suggestions');
+
+      input.addEventListener('input', () => {
+        renderSuggestions(input.value);
+        // Do not filter the main list on every keystroke if you prefer—currently we do:
+        applyFilterAndRender();
+      });
+
+      input.addEventListener('focus', () => {
+        if (input.value.trim()) renderSuggestions(input.value);
+      });
+
+      input.addEventListener('keydown', (e) => {
+        if (!sugg.classList.contains('show')) return;
+        if (e.key === 'ArrowDown') { e.preventDefault(); moveActive(1); }
+        else if (e.key === 'ArrowUp') { e.preventDefault(); moveActive(-1); }
+        else if (e.key === 'Enter') { e.preventDefault(); activateCurrentSuggestion(); }
+        else if (e.key === 'Escape') { hideSuggestions(); }
+      });
+
+      btn.addEventListener('click', () => {
+        hideSuggestions();
+        applyFilterAndRender();
+        document.getElementById('results').scrollIntoView({behavior:'smooth', block:'start'});
+      });
+
+      // Close suggestions when clicking outside
+      document.addEventListener('click', (e) => {
+        const bar = document.querySelector('.searchbar');
+        if (!bar.contains(e.target)) hideSuggestions();
+      });
     }
 
     main();
