--- a/site/index.html
+++ b/site/index.html
@@ -21,7 +21,19 @@
       padding:16px 24px;border-bottom:1px solid var(--card-border);
       background:#fff;height:var(--sitebar-h);box-sizing:border-box;
     }
-    .site-title{font-size:22px;font-weight:600;margin:0;}
+
+    /* Title + logo */
+    .site-title{
+      display:flex;align-items:center;gap:10px;
+      font-size:22px;font-weight:600;margin:0;line-height:1.2;
+    }
+    .site-title-text{white-space:nowrap;}
+    .site-logo{
+      height:1em;          /* match text height */
+      width:auto;          /* keep aspect ratio */
+      display:inline-block;
+      vertical-align:middle;
+    }
 
     .main{padding:24px;box-sizing:border-box;height:calc(100vh - var(--sitebar-h));overflow-y:auto;display:flex;flex-direction:column;gap:16px;}
 
@@ -82,7 +94,10 @@
 <body>
   <!-- Global header -->
   <div class="sitebar">
-    <h1 class="site-title">Computational Structure Database</h1>
+    <h1 class="site-title">
+      <span class="site-title-text">Computational Structure Database</span>
+      <img class="site-logo" src="https://raw.githubusercontent.com/BM-DB/uniprot-browser/refs/heads/main/site/graphic1.png" alt="Project logo" />
+    </h1>
   </div>
 
   <div class="main">
@@ -312,8 +327,9 @@
       currentPage = Math.min(Math.max(1, p), totalPages);
       renderList(currentFiltered, currentPage);
       // Move focus to results wrapper for better SR/keyboard experience
-      document.getElementById('results').setAttribute('tabindex', '-1');
-      document.getElementById('results').focus({preventScroll:true});
+      const res = document.getElementById('results');
+      res.setAttribute('tabindex', '-1');
+      res.focus({preventScroll:true});
     }
 
     function applyFilterAndRender() {
