--- a/site/entry.html
+++ b/site/entry.html
@@ -83,7 +83,7 @@
   <div class="sitebar">
     <h1 class="site-title">
       <span class="site-title-text">Computational Structure Database</span>
-      <img class="site-logo" src="YOUR_LOGO_URL_HERE" alt="Project logo" />
+      <img class="site-logo" src="https://raw.githubusercontent.com/BM-DB/uniprot-browser/refs/heads/main/site/graphic1.png" alt="Project logo" />
     </h1>
   </div>
 
